# hw-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.claude/: 3573877b-024c-4854-a232-ee383769fa24.jsonl  4caacd27-793a-4db7-92e6-136b14698a24.jsonl  690a393f-b195-4bfd-ab9a-19ccabcd2fa1.jsonl  6d17dd14-1a84-4261-953b-fc5bf8182002.jsonl  agent-a2e0dd6.jsonl  agent-a4280a3.jsonl  agent-a445975.jsonl  agent-a48dbbe.jsonl  agent-a557d7a.jsonl  agent-aaf8687.jsonl  agent-abed5b8.jsonl  agent-add7a32.jsonl  agent-ae11abe.jsonl  agent-af379ae.jsonl  f67036bf-d428-424c-b3fc-3e5f42e4718f.jsonl  settings.local.json
no-std-no-main/: Cargo.toml
no-std-no-main/.cargo/: config.toml
no-std-no-main/src/: lib.rs  main.rs
std-gnu/: Cargo.toml
std-gnu/.cargo/: config.toml
std-musl/: Cargo.toml
std-musl/.cargo/: config.toml
